--- a/scss/_levels.scss
+++ b/scss/_levels.scss
@@ -177,7 +177,7 @@ section[data-class="levels"].levels{
             max-width: 1300px;
             width: 80%;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
             position: relative;
             z-index: 2;
 
