--- a/scss/_scoreboard.scss
+++ b/scss/_scoreboard.scss
@@ -27,5 +27,9 @@ section[data-class="scoreboard"].scoreboard{
         margin: -120px auto 0;
         border-radius: 50px;
 
+        h2{
+            font-size: clamp(2.8em, 4em, 3.2vw);
+        }
+
     }
 }
